Improve the workflow to check mpeg videos before dicomization